PL-1441: Handling inaccurate values when checking for uttak